assign_3 data upload

--- a/cv_bootcamp/assign_3/assign_3.ipynb
+++ b/cv_bootcamp/assign_3/assign_3.ipynb
@@ -170,9 +170,20 @@
       },
       "outputs": [],
       "source": [
-        "# TODO: Use Caltech-256 dataset, you can download and load it through torchvision.datasets.ImageFolder\n",
-        "# Set this to the absolute path of the Caltech-256 directory named '256_ObjectCategories'\n",
-        "DATA_DIR = \"/absolute/path/to/256_ObjectCategories\"  # <- UPDATE THIS PATH\n",
+        "# Improved data loading: use project-local 'data/' directory, auto-download if needed\n",
+        "data_root = './data/256_ObjectCategories'\n",
+        "data_url = 'http://www.vision.caltech.edu/Image_Datasets/Caltech256/256_ObjectCategories.tar'\n",
+        "\n",
+        "import os\n",
+        "from torchvision.datasets.utils import download_and_extract_archive\n",
+        "\n",
+        "if not os.path.isdir(data_root):\n",
+        "    parent_dir = os.path.dirname(data_root)\n",
+        "    # Download and extract only if missing\n",
+        "    print(f\"Downloading Caltech-256 dataset to {parent_dir} ...\")\n",
+        "    download_and_extract_archive(data_url, download_root=parent_dir, remove_finished=True)\n",
+        "\n",
+        "DATA_DIR = data_root\n",
         "\n",
         "# Build train/test split using consistent indices and separate transforms\n",
         "base_dataset = datasets.ImageFolder(root=DATA_DIR)\n",
@@ -186,7 +197,7 @@
         "test_dataset = torch.utils.data.Subset(datasets.ImageFolder(root=DATA_DIR, transform=transform_test), test_indices)\n",
         "\n",
         "train_loader = DataLoader(train_dataset, batch_size=32, shuffle=True, num_workers=4)\n",
-        "test_loader = DataLoader(test_dataset, batch_size=32, shuffle=False, num_workers=4)"
+        "test_loader = DataLoader(test_dataset, batch_size=32, shuffle=False, num_workers=4)\n"
       ]
     },
     {
